--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
         href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
         rel="stylesheet"
     />
-    <title>Flask App with Tildwind</title>
+    <title>a ver si funiocna</title>
   </head>
   <body>
     <div class="relative pt-6 pb-16 sm:pb-24">
